--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="about-image">
                     <div class="image-wrapper">
                         <div class="image-decor"></div>
-                        <img src="img/arquiteto-perfil.webp" alt="Rafael Lima - Arquiteto">
+                        <img src="img/arquiteto-perfil.webp" alt="Rafael Lima - Arquiteto" width="600" height="400">
                     </div>
                 </div>
 
@@ -115,7 +115,7 @@
                 <!-- Casa Cubo (destaque inicial) -->
                 <div class="portfolio-item active">
                     <div class="portfolio-img-wrapper">
-                        <img src="img/casaCubo.webp" alt="Casa Cubo" loading="lazy">
+                        <img src="img/casaCubo.webp" alt="Casa Cubo" loading="lazy" width="600" height="400">
                     </div>
                     <div class="portfolio-overlay">
                         <span class="portfolio-tag">Residencial</span>
